whitelabel/app-mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: mysql
spec:
    ports:
      - name: mysql
        port: 3306
        targetPort: mysql
    selector:
        app: mysql
    type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  serviceName: "mysql"
  template:
    metadata:
      labels:
        app: mysql
    spec:
#      securityContext:
#        fsGroup: 1978
      containers:
      - name: mysql
        image: mysql:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: datadir
          mountPath: /var/lib/mysql
          subPath: mysql 
#      imagePullSecrets:
#        - name: docker-hub
      volumes:
        - name: datadir
          persistentVolumeClaim:
           claimName: nfs
